Remove navbar slide in, fix timeline overlapping navbar bug.

--- a/css/style.css
+++ b/css/style.css
@@ -440,6 +440,7 @@
 	top: 0;
 	height: 50px;
 	margin: 0;
+	z-index: 1000;
 }
 
 #bootstrapOverrides .projectsNav .nav li{
